--- a/home0.html
+++ b/home0.html
@@ -13,7 +13,7 @@
     <link href="css/projectReports.css" rel="stylesheet">
 
 
-    <title>Project Documentation: Java Shapes Example</title>
+    <title>Project Documentation: WebAnalysis</title>
 </head>
 <body>
     <div class="container-fluid h-100">
