Update report site

--- a/home.html
+++ b/home.html
@@ -87,9 +87,9 @@
 
                 <p>This is an example home page.</p>
 <hr />
-<p>WebAnalysis is a program to be developed as a group project for the Introduction to Software Engineering course CS350 at Old Dominion University.</p>
-<p>Program Description.</p>
-<p>The WebsiteAnalysis system shall be capable of analyzing the content of a copy of a website. It traverses through static content on each page, performs analysis, and produces three reports. The JSON file report describes each page and resource in the site. The text file outputs all traversed local pages sorted lexicographically. The Excel report contains a summary of content on each page.</p>
+<p>Reports web page: click <a href="https://mariia-ellis.github.io/tuesday4_reports/home.html">here</a></p>
+<p>Authors:</p>
+<p>JoshRoman88  - jroma014@odu.edu kendraschall - kscha005@odu.edu Mariia-Ellis - mvoro001@odu.edu</p>
 
             </div>
         </div>
